2012-08-06  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: MP2/MP3 audio tracks in MPEG program streams
	that contained garbage at the start of the very first packet
	caused mkvmerge to use uninitialized/random values for certain
	parameters (sample rate, number of channels, and therefore also
	during timecode calculation).

2012-08-05  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: Added support for reading ALAC (Apple
	Lossless Audio Codec) from CAF (CoreAudio), MP4 and Matroska
	files. Implements #753.

2012-08-02  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: new feature: mkvmerge will remove stuffing bytes from
	MPEG-1/-2 video streams that are used to keep the bit rate above
	certain levels (the 0 bytes between slices and the following start
	code). Implements #734.

2012-08-01  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: Fixed audio/video synchronisation when
	reading MPEG program streams with MPEG-1/2 video with respect to B
	frames. Fixes #579.

	* mkvmerge: enhancement: SRT files can have spaces in their
	timecode line's arrow (e.g. "-- >").

2012-07-31  Moritz Bunkus  <moritz@bunkus.org>

	* mkvmerge: bug fix: VC1: mkvmerge will now only mark frames as I
	frames if a sequence header precedes them directly. Fixes #755.

2012-07-30  Moritz Bunkus  <moritz@bunkus.org>

	* all: new feature: Added a Basque translation by Xabier Aramendi
	(see AUTHORS).

2012-07-20  Moritz Bunkus  <moritz@bunkus.org>

	* all: bug fix: The programs do not try to create directories with
	empty names anymore. This happened if the output file name for
	e.g. mkvmerge or mkvextract was only a file name without a
	directory component. With Boost v1.50.0 the call to
	"boost::filesystem::create_directory()" would result in an error
	if the name was empty (it didn't in earlier versions of Boost).

2012-07-11  Moritz Bunkus  <moritz@bunkus.org>

	* mmg: bug fix: Fixed mmg not reading the very last line of